Fix main size and overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,6 +38,11 @@ header {
   }
 }
 
+#main-content {
+  @include fixedWidth(100%);
+  // @include fixedHeight(calc(100% - var(--headerHeight) - var(--footerHeight)));
+}
+
 footer {
   display: flex;
   align-items: center;
