--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,6 +129,7 @@ $white: #ffffff;
 html,
 body,
 app-root {
+  display: block;
   height: 100vh;
   width: 100vw;
   margin: 0;
